# whisp-protobuf

./: README.md
cpp/: channel.pb.cc  channel.pb.h  client.pb.cc  client.pb.h  server.pb.cc  server.pb.h  user.pb.cc  user.pb.h
proto/: CMakeLists.txt  channel.proto  client.proto  server.proto  user.proto
